# SummerUniversity2022

cuda/solutions/diffusion/: CMakeLists.txt  catalyst_state.py  diffusion2d.cu
miniapp/cuda/: AscentAdaptor.cu  CMakeLists.txt  How_to_Compile.txt  catalyst_state.py  data.h  main.cu
miniapp/openmp/: AscentAdaptor.cpp  AscentAdaptor.h  CMakeLists.txt  CatalystAdaptor.cpp  How_to_Compile.txt  data.h  main.cpp
